--- a/data/statistical-analysis.ipynb
+++ b/data/statistical-analysis.ipynb
@@ -423,16 +423,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x10d41b128>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11e250160>"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -457,16 +457,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11e07fac8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1215fea58>"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     },
