--- a/data/statistical-analysis.ipynb
+++ b/data/statistical-analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,8 +232,8 @@
        "      <td>sansforgetica</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>2239.250</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2124.000</td>\n",
+       "      <td>2354.500</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -265,8 +265,8 @@
        "      <td>inputsans</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>1840.450</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1731.300</td>\n",
+       "      <td>1949.600</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -318,16 +318,16 @@
        "\n",
        "                                             Response time (word)  \\\n",
        "Study ID Participant ID Test ID Test type                           \n",
-       "0.0      20.0           1       lexical                       NaN   \n",
+       "0.0      20.0           1       lexical                  2124.000   \n",
        "                                recognition              2694.000   \n",
-       "                        2       lexical                       NaN   \n",
+       "                        2       lexical                  1731.300   \n",
        "                                recognition              2032.625   \n",
        "\n",
        "                                             Response time (non-word)  \\\n",
        "Study ID Participant ID Test ID Test type                               \n",
-       "0.0      20.0           1       lexical                           NaN   \n",
+       "0.0      20.0           1       lexical                      2354.500   \n",
        "                                recognition                  2579.750   \n",
-       "                        2       lexical                           NaN   \n",
+       "                        2       lexical                      1949.600   \n",
        "                                recognition                  2259.125   \n",
        "\n",
        "                                                  AUC  AUC (word)  \\\n",
@@ -407,15 +407,15 @@
     "                results.loc[(sid, pid, tid, ttype), \"AUC\"] = auc\n",
     "                rt = dt[dt[\"Test type\"] == ttype][\"Response time\"].mean()\n",
     "                results.loc[(sid, pid, tid, ttype), \"Response time\"] = rt\n",
-    "                if ttype == \"recognition\":\n",
-    "                    for cat in [\"word\", \"non-word\"]:\n",
+    "                for cat in [\"word\", \"non-word\"]:\n",
+    "                    if ttype == \"recognition\":\n",
     "                        dg[\"Frequencies\"] = dt[(dt[\"Test type\"] == ttype) & (dt[\"Category\"] == cat)].groupby([category_used])[\"Response\"].value_counts()\n",
     "                        dg = dg.fillna(0)\n",
     "                        freqs = dg[\"Frequencies\"].tolist()\n",
     "                        auc = get_auc(freqs[4:], freqs[:4])\n",
     "                        results.loc[(sid, pid, tid, ttype), \"AUC (%s)\" % cat] = auc\n",
-    "                        rt = dt[(dt[\"Test type\"] == ttype) & (dt[\"Category\"] == cat)][\"Response time\"].mean()\n",
-    "                        results.loc[(sid, pid, tid, ttype), \"Response time (%s)\" % cat] = rt\n",
+    "                    rt = dt[(dt[\"Test type\"] == ttype) & (dt[\"Category\"] == cat)][\"Response time\"].mean()\n",
+    "                    results.loc[(sid, pid, tid, ttype), \"Response time (%s)\" % cat] = rt\n",
     "            \n",
     "display(results[-4:])\n",
     "results.to_csv(\"statistical-results.csv\")"
@@ -516,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
