Removed tinted buttons, minor change in data-processing notebook

--- a/data/process-data.ipynb
+++ b/data/process-data.ipynb
@@ -323,8 +323,8 @@
     "options = {}\n",
     "for i, rraw in raw.iterrows():\n",
     "    rd_temp = pd.Series(index=d.columns)\n",
-    "    if \"Study ID\" in rraw:\n",
-    "        rd_temp[\"Study ID\"] = rraw[\"Study ID\"]\n",
+    "    if \"studyid\" in rraw:\n",
+    "        rd_temp[\"Study ID\"] = rraw[\"studyid\"]\n",
     "    else:\n",
     "        rd_temp[\"Study ID\"] = 0 # pilot study\n",
     "    rd_temp[\"Participant ID\"] = i\n",
