--- a/data/process-data.ipynb
+++ b/data/process-data.ipynb
@@ -329,9 +329,9 @@
     "        rd_temp[\"Study ID\"] = 0 # pilot study\n",
     "    rd_temp[\"Participant ID\"] = i\n",
     "    if \"Native\" in rraw:\n",
-    "        rd_temp[\"Native\"] = rraw[\"Native\"]\n",
-    "    else:\n",
-    "        rd_temp[\"Native\"] = rraw[\"Fluent\"] # legacy\n",
+    "        rd_temp[\"Native\"] = rraw[\"Native\"] # legacy\n",
+    "    if \"Fluent\" in rraw:\n",
+    "        rd_temp[\"Fluent\"] = rraw[\"Fluent\"]\n",
     "    if \"Designer\" in rraw:\n",
     "        rd_temp[\"Designer\"] = rraw[\"Designer\"] # legacy\n",
     "    else:\n",
