Updated data, notebooks and stats, using new GetForm endpoint

--- a/data/process-data.ipynb
+++ b/data/process-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "      <th></th>\n",
        "      <th>Study ID</th>\n",
        "      <th>Participant ID</th>\n",
-       "      <th>Native</th>\n",
+       "      <th>Fluent</th>\n",
        "      <th>Designer</th>\n",
        "      <th>Test ID</th>\n",
        "      <th>Test type</th>\n",
@@ -262,7 +262,7 @@
        "</div>"
       ],
       "text/plain": [
-       "      Study ID  Participant ID Native      Designer Test ID    Test type  \\\n",
+       "      Study ID  Participant ID Fluent      Designer Test ID    Test type  \\\n",
        "1502       0.0            20.0    yes  Non-designer       2  recognition   \n",
        "1503       0.0            20.0    yes  Non-designer       2  recognition   \n",
        "1504       0.0            20.0    yes  Non-designer       2  recognition   \n",
@@ -308,7 +308,7 @@
     "import numpy as np\n",
     "\n",
     "columns = [\n",
-    "    \"Study ID\", \"Participant ID\", \"Native\", \"Designer\",\n",
+    "    \"Study ID\", \"Participant ID\", \"Fluent\", \"Designer\",\n",
     "    \"Test ID\", \"Test type\", \"Trial ID\",\n",
     "    \"Font\", \"Sample\", \"Category\",\n",
     "    \"Response\", \"Correct\", \"Seen\", \"Foil\", \"Response time\",\n",
@@ -316,7 +316,8 @@
     "]\n",
     "d = pd.DataFrame(columns=columns)\n",
     "\n",
-    "raw = pd.read_csv(\"data.csv\")\n",
+    "rawfilename = \"data-pilot.csv\"\n",
+    "raw = pd.read_csv(rawfilename)\n",
     "\n",
     "x = 0\n",
     "prev_x = -1\n",
@@ -328,10 +329,10 @@
     "    else:\n",
     "        rd_temp[\"Study ID\"] = 0 # pilot study\n",
     "    rd_temp[\"Participant ID\"] = i\n",
-    "    if \"Native\" in rraw:\n",
-    "        rd_temp[\"Native\"] = rraw[\"Native\"] # legacy\n",
     "    if \"Fluent\" in rraw:\n",
     "        rd_temp[\"Fluent\"] = rraw[\"Fluent\"]\n",
+    "    elif \"Native\" in rraw:\n",
+    "        rd_temp[\"Fluent\"] = rraw[\"Native\"] # legacy\n",
     "    if \"Designer\" in rraw:\n",
     "        rd_temp[\"Designer\"] = rraw[\"Designer\"] # legacy\n",
     "    else:\n",
@@ -343,7 +344,13 @@
     "            rd = pd.Series(rd_temp)\n",
     "            rd[\"Category\"], rd[\"Seen\"], rd[\"Foil\"] = np.nan, np.nan, np.nan # force defaults\n",
     "            _, rd[\"Test ID\"], rd[\"Test type\"], rd[\"Trial ID\"] = c.strip().split(\"_\")\n",
-    "            response = rraw[c].strip().split(\",\")\n",
+    "            try:\n",
+    "                response = rraw[c].strip().split(\",\")\n",
+    "            except:\n",
+    "                print(\"Error with:\", c, rraw[c])\n",
+    "                print(\"Date:\", rraw[-1])\n",
+    "                print(\"Skipping\")\n",
+    "                continue\n",
     "            \n",
     "            # tackle legacy formats of responses\n",
     "            rd[\"Font\"] = response[0].strip()\n",
@@ -388,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +421,7 @@
        "      <th></th>\n",
        "      <th>Study ID</th>\n",
        "      <th>Participant ID</th>\n",
-       "      <th>Native</th>\n",
+       "      <th>Fluent</th>\n",
        "      <th>Designer</th>\n",
        "      <th>Test ID</th>\n",
        "      <th>Test type</th>\n",
@@ -648,7 +655,7 @@
        "</div>"
       ],
       "text/plain": [
-       "      Study ID  Participant ID  Native      Designer Test ID    Test type  \\\n",
+       "      Study ID  Participant ID  Fluent      Designer Test ID    Test type  \\\n",
        "1502       0.0            20.0    True  Non-designer       2  recognition   \n",
        "1503       0.0            20.0    True  Non-designer       2  recognition   \n",
        "1504       0.0            20.0    True  Non-designer       2  recognition   \n",
@@ -700,7 +707,7 @@
     "\n",
     "\n",
     "for i, rd in d.iterrows():\n",
-    "    rd[\"Native\"] = rd[\"Native\"] == \"yes\"\n",
+    "    rd[\"Fluent\"] = rd[\"Fluent\"] == \"yes\"\n",
     "    if isinstance(rd[\"Category\"], float) or rd[\"Category\"] is np.nan:\n",
     "        # get missing category\n",
     "        rd[\"Category\"] = categories[rd[\"Sample\"]]\n",
@@ -724,7 +731,7 @@
     "display(d[-10:])\n",
     "            \n",
     "# save the processed data\n",
-    "d.to_csv(\"data-processed.csv\")"
+    "d.to_csv(rawfilename.replace(\".csv\", \"_processed.csv\"))"
    ]
   },
   {
