--- a/data/statistical-analysis.ipynb
+++ b/data/statistical-analysis.ipynb
@@ -13,9 +13,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "import glob\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "datafilename = \"data_processed.csv\"\n",
     "d = pd.read_csv(datafile)\n",
@@ -534,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
