--- a/data/statistical-analysis.ipynb
+++ b/data/statistical-analysis.ipynb
@@ -101,7 +101,7 @@
     "print(\"Different kinds of designers:\")\n",
     "print(d[\"Designer\"].value_counts() / 72)\n",
     "print()\n",
-    "print(\"Which font was first\")\n",
+    "print(\"Which font was first:\")\n",
     "print(d[d[\"Test ID\"] == 1][\"Font\"].value_counts() / 36)\n",
     "\n"
    ]
