Corrected generation of ids

--- a/data/process-data.ipynb
+++ b/data/process-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "    <tr>\n",
        "      <th>4526</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
+       "      <td>4464.0</td>\n",
        "      <td>yes</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
@@ -71,7 +71,7 @@
        "    <tr>\n",
        "      <th>4527</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
+       "      <td>4464.0</td>\n",
        "      <td>yes</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
@@ -92,7 +92,7 @@
        "    <tr>\n",
        "      <th>4528</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
+       "      <td>4464.0</td>\n",
        "      <td>yes</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
@@ -113,7 +113,7 @@
        "    <tr>\n",
        "      <th>4529</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
+       "      <td>4464.0</td>\n",
        "      <td>yes</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
@@ -134,7 +134,7 @@
        "    <tr>\n",
        "      <th>4530</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
+       "      <td>4464.0</td>\n",
        "      <td>yes</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
@@ -155,7 +155,7 @@
        "    <tr>\n",
        "      <th>4531</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
+       "      <td>4464.0</td>\n",
        "      <td>yes</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
@@ -176,7 +176,7 @@
        "    <tr>\n",
        "      <th>4532</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
+       "      <td>4464.0</td>\n",
        "      <td>yes</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
@@ -197,7 +197,7 @@
        "    <tr>\n",
        "      <th>4533</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
+       "      <td>4464.0</td>\n",
        "      <td>yes</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
@@ -218,7 +218,7 @@
        "    <tr>\n",
        "      <th>4534</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
+       "      <td>4464.0</td>\n",
        "      <td>yes</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
@@ -239,7 +239,7 @@
        "    <tr>\n",
        "      <th>4535</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
+       "      <td>4464.0</td>\n",
        "      <td>yes</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
@@ -263,16 +263,16 @@
       ],
       "text/plain": [
        "      Study ID  Participant ID Fluent         Designer Test ID    Test type  \\\n",
-       "4526       1.0            38.0    yes  Letter designer       2  recognition   \n",
-       "4527       1.0            38.0    yes  Letter designer       2  recognition   \n",
-       "4528       1.0            38.0    yes  Letter designer       2  recognition   \n",
-       "4529       1.0            38.0    yes  Letter designer       2  recognition   \n",
-       "4530       1.0            38.0    yes  Letter designer       2  recognition   \n",
-       "4531       1.0            38.0    yes  Letter designer       2  recognition   \n",
-       "4532       1.0            38.0    yes  Letter designer       2  recognition   \n",
-       "4533       1.0            38.0    yes  Letter designer       2  recognition   \n",
-       "4534       1.0            38.0    yes  Letter designer       2  recognition   \n",
-       "4535       1.0            38.0    yes  Letter designer       2  recognition   \n",
+       "4526       1.0          4464.0    yes  Letter designer       2  recognition   \n",
+       "4527       1.0          4464.0    yes  Letter designer       2  recognition   \n",
+       "4528       1.0          4464.0    yes  Letter designer       2  recognition   \n",
+       "4529       1.0          4464.0    yes  Letter designer       2  recognition   \n",
+       "4530       1.0          4464.0    yes  Letter designer       2  recognition   \n",
+       "4531       1.0          4464.0    yes  Letter designer       2  recognition   \n",
+       "4532       1.0          4464.0    yes  Letter designer       2  recognition   \n",
+       "4533       1.0          4464.0    yes  Letter designer       2  recognition   \n",
+       "4534       1.0          4464.0    yes  Letter designer       2  recognition   \n",
+       "4535       1.0          4464.0    yes  Letter designer       2  recognition   \n",
        "\n",
        "     Trial ID           Font       Sample  Category           Response  \\\n",
        "4526        7  sansforgetica        rooms      word      Sure not seen   \n",
@@ -349,7 +349,7 @@
     "            rd_temp[\"Study ID\"] = rraw[\"studyid\"]\n",
     "        else:\n",
     "            rd_temp[\"Study ID\"] = 0 # pilot study\n",
-    "        rd_temp[\"Participant ID\"] = i\n",
+    "        rd_temp[\"Participant ID\"] = int(x)\n",
     "        if \"Fluent\" in rraw:\n",
     "            rd_temp[\"Fluent\"] = rraw[\"Fluent\"]\n",
     "        elif \"Native\" in rraw:\n",
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -465,8 +465,8 @@
        "    <tr>\n",
        "      <th>4526</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>4464.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
        "      <td>recognition</td>\n",
@@ -486,8 +486,8 @@
        "    <tr>\n",
        "      <th>4527</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>4464.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
        "      <td>recognition</td>\n",
@@ -507,8 +507,8 @@
        "    <tr>\n",
        "      <th>4528</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>4464.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
        "      <td>recognition</td>\n",
@@ -528,8 +528,8 @@
        "    <tr>\n",
        "      <th>4529</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>4464.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
        "      <td>recognition</td>\n",
@@ -549,8 +549,8 @@
        "    <tr>\n",
        "      <th>4530</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>4464.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
        "      <td>recognition</td>\n",
@@ -570,8 +570,8 @@
        "    <tr>\n",
        "      <th>4531</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>4464.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
        "      <td>recognition</td>\n",
@@ -591,8 +591,8 @@
        "    <tr>\n",
        "      <th>4532</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>4464.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
        "      <td>recognition</td>\n",
@@ -612,8 +612,8 @@
        "    <tr>\n",
        "      <th>4533</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>4464.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
        "      <td>recognition</td>\n",
@@ -633,8 +633,8 @@
        "    <tr>\n",
        "      <th>4534</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>4464.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
        "      <td>recognition</td>\n",
@@ -654,8 +654,8 @@
        "    <tr>\n",
        "      <th>4535</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>4464.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>Letter designer</td>\n",
        "      <td>2</td>\n",
        "      <td>recognition</td>\n",
@@ -678,16 +678,16 @@
       ],
       "text/plain": [
        "      Study ID  Participant ID  Fluent         Designer Test ID    Test type  \\\n",
-       "4526       1.0            38.0    True  Letter designer       2  recognition   \n",
-       "4527       1.0            38.0    True  Letter designer       2  recognition   \n",
-       "4528       1.0            38.0    True  Letter designer       2  recognition   \n",
-       "4529       1.0            38.0    True  Letter designer       2  recognition   \n",
-       "4530       1.0            38.0    True  Letter designer       2  recognition   \n",
-       "4531       1.0            38.0    True  Letter designer       2  recognition   \n",
-       "4532       1.0            38.0    True  Letter designer       2  recognition   \n",
-       "4533       1.0            38.0    True  Letter designer       2  recognition   \n",
-       "4534       1.0            38.0    True  Letter designer       2  recognition   \n",
-       "4535       1.0            38.0    True  Letter designer       2  recognition   \n",
+       "4526       1.0          4464.0   False  Letter designer       2  recognition   \n",
+       "4527       1.0          4464.0   False  Letter designer       2  recognition   \n",
+       "4528       1.0          4464.0   False  Letter designer       2  recognition   \n",
+       "4529       1.0          4464.0   False  Letter designer       2  recognition   \n",
+       "4530       1.0          4464.0   False  Letter designer       2  recognition   \n",
+       "4531       1.0          4464.0   False  Letter designer       2  recognition   \n",
+       "4532       1.0          4464.0   False  Letter designer       2  recognition   \n",
+       "4533       1.0          4464.0   False  Letter designer       2  recognition   \n",
+       "4534       1.0          4464.0   False  Letter designer       2  recognition   \n",
+       "4535       1.0          4464.0   False  Letter designer       2  recognition   \n",
        "\n",
        "     Trial ID           Font       Sample  Category           Response  \\\n",
        "4526        7  sansforgetica        rooms      word      Sure not seen   \n",
