--- a/data/statistical-analysis.ipynb
+++ b/data/statistical-analysis.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading 4536 lines.\n"
+     ]
+    }
+   ],
    "source": [
     "import glob\n",
     "import matplotlib.pyplot as plt\n",
@@ -21,6 +29,8 @@
     "datafilename = \"data_processed.csv\"\n",
     "d = pd.read_csv(datafilename)\n",
     "#d = d[-72:] # use just the data for the  last participant\n",
+    "\n",
+    "print(\"Loading\", len(d), \"lines.\")\n",
     "\n",
     "# functions to calculate AUC and plot ROC\n",
     "\n",
@@ -61,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -69,11 +79,10 @@
      "output_type": "stream",
      "text": [
       "Number of participants:\n",
-      "39\n",
+      "63\n",
       "\n",
       "Fluent vs. non-native:\n",
-      "True     59.0\n",
-      "False     4.0\n",
+      "False    63.0\n",
       "Name: Fluent, dtype: float64\n",
       "\n",
       "Different kinds of designers:\n",
@@ -115,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +269,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th rowspan=\"4\" valign=\"top\">1.0</th>\n",
-       "      <th rowspan=\"4\" valign=\"top\">38.0</th>\n",
+       "      <th rowspan=\"4\" valign=\"top\">4464.0</th>\n",
        "      <th rowspan=\"2\" valign=\"top\">1</th>\n",
        "      <th>lexical</th>\n",
        "      <td>NaN</td>\n",
@@ -333,56 +342,56 @@
       "text/plain": [
        "                                             Native         Designer  \\\n",
        "Study ID Participant ID Test ID Test type                              \n",
-       "1.0      38.0           1       lexical         NaN  Letter designer   \n",
+       "1.0      4464.0         1       lexical         NaN  Letter designer   \n",
        "                                recognition     NaN  Letter designer   \n",
        "                        2       lexical         NaN  Letter designer   \n",
        "                                recognition     NaN  Letter designer   \n",
        "\n",
        "                                                      Font  Correct  \\\n",
        "Study ID Participant ID Test ID Test type                             \n",
-       "1.0      38.0           1       lexical              arial   0.9000   \n",
+       "1.0      4464.0         1       lexical              arial   0.9000   \n",
        "                                recognition          arial   1.0000   \n",
        "                        2       lexical      sansforgetica   0.9500   \n",
        "                                recognition  sansforgetica   0.9375   \n",
        "\n",
        "                                             Response time  \\\n",
        "Study ID Participant ID Test ID Test type                    \n",
-       "1.0      38.0           1       lexical          4039.9000   \n",
+       "1.0      4464.0         1       lexical          4039.9000   \n",
        "                                recognition      2186.6875   \n",
        "                        2       lexical          4101.7500   \n",
        "                                recognition      3256.6250   \n",
        "\n",
        "                                             Response time (word)  \\\n",
        "Study ID Participant ID Test ID Test type                           \n",
-       "1.0      38.0           1       lexical                  2376.000   \n",
+       "1.0      4464.0         1       lexical                  2376.000   \n",
        "                                recognition              1889.625   \n",
        "                        2       lexical                  2416.200   \n",
        "                                recognition              4113.125   \n",
        "\n",
        "                                             Response time (non-word)     AUC  \\\n",
        "Study ID Participant ID Test ID Test type                                       \n",
-       "1.0      38.0           1       lexical                      5703.800  1.0000   \n",
+       "1.0      4464.0         1       lexical                      5703.800  1.0000   \n",
        "                                recognition                  2483.750  1.0000   \n",
        "                        2       lexical                      5787.300  1.0000   \n",
        "                                recognition                  2400.125  0.9375   \n",
        "\n",
        "                                             AUC (word)  AUC (non-word)  \\\n",
        "Study ID Participant ID Test ID Test type                                 \n",
-       "1.0      38.0           1       lexical             NaN             NaN   \n",
+       "1.0      4464.0         1       lexical             NaN             NaN   \n",
        "                                recognition         1.0           1.000   \n",
        "                        2       lexical             NaN             NaN   \n",
        "                                recognition         1.0           0.875   \n",
        "\n",
        "                                                           JoL  JoM  \\\n",
        "Study ID Participant ID Test ID Test type                             \n",
-       "1.0      38.0           1       lexical           easy to read   85   \n",
+       "1.0      4464.0         1       lexical           easy to read   85   \n",
        "                                recognition       easy to read   85   \n",
        "                        2       lexical      difficult to read   75   \n",
        "                                recognition  difficult to read   75   \n",
        "\n",
        "                                                         Date  \n",
        "Study ID Participant ID Test ID Test type                      \n",
-       "1.0      38.0           1       lexical      04-04-2019 08:32  \n",
+       "1.0      4464.0         1       lexical      04-04-2019 08:32  \n",
        "                                recognition  04-04-2019 08:32  \n",
        "                        2       lexical      04-04-2019 08:32  \n",
        "                                recognition  04-04-2019 08:32  "
@@ -452,16 +461,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x104c330b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x102102198>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -486,16 +495,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1133bcc18>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x113a83dd8>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
